Enable task creation, update, and deletion endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=taskmanager_webapp
+
+
+server.port=8081
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:taskdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sai
+spring.datasource.password=kishore
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Optional: Show SQL in logs
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
